# learnopengl

./: .gitignore  CMakeLists.txt  main.cpp
include/glad/: glad.h
shaders/: cube.fs  cube.vs  light.fs  shader.fs  shader.vs
src/: camera.h  glad.c  main.cpp  shader.h
